k8s/devops-project/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: devops-project
  labels:
    app: devops-project
spec:
  replicas: 1
  selector:
    matchLabels:
      app: devops-project
  template:
    metadata:
      labels:
        app: devops-project
    spec:
      securityContext:
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: devops-project
          image: acrfordevopspoc01adrian.azurecr.io/devops-project:1.0.3
          ports:
            - containerPort: 8080
          startupProbe:
            httpGet:
              path: /actuator/health
              port: 8080
            periodSeconds: 5
            failureThreshold: 30
          readinessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: 8080
            periodSeconds: 10
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: /actuator/health/liveness
              port: 8080
            periodSeconds: 10
            failureThreshold: 3
          resources:
            requests:
              cpu: "50m"
              memory: "128Mi"
            limits:
              cpu: "100m"
              memory: "256Mi"
          securityContext:
            runAsNonRoot: true
            runAsUser: 1000
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            capabilities:
              drop:
                - ALL
